--- a/helloworld/templates/index.html
+++ b/helloworld/templates/index.html
@@ -47,10 +47,10 @@
         <header>
             <nav class="website-nav">
                 <ul>
-                    <li><a class="home-link" href="https://aws.amazon.com/">Home</a></li>
-                    <li><a href="https://aws.amazon.com/what-is-cloud-computing/">About</a></li>
-                    <li><a href="https://aws.amazon.com/solutions/">Services</a></li>
-                    <li><a href="https://aws.amazon.com/contact-us/">Contact</a></li>
+                    <li><a class="home-link" href="https://www.broadridge.com/">Home</a></li>
+                    <li><a href="https://www.broadridge.com/about/">About</a></li>
+                    <li><a href="https://www.broadridge.com/broadridge-insights/">Insights</a></li>
+                    <li><a href="https://www.broadridge.com/about/client-support">Client Support</a></li>
                 </ul>
             </nav>
         </header>
@@ -58,14 +58,14 @@
         <div class="message">
             <a class="twitter-link" href="http://twitter.com/home/?status=I%20created%20a%20project%20with%20AWS%20CodeStar!%20%23AWS%20%23AWSCodeStar%20https%3A%2F%2Faws.amazon.com%2Fcodestar"><img src="{% static "helloworld/img/tweet.svg" %}" /></a>
             <div class="text">
-                <h1>Congratulations!</h1>
-                <h2>You just created a Python Django web application!</h2>
+                <h1>Welcome!</h1>
+                <h2>Sample web application!</h2>
             </div>
         </div>
     </div>
 
     <footer>
-        <p class="footer-contents">Designed and developed with <a href="https://aws.amazon.com/careers/devtools-jobs/">♥</a> in Seattle.</p>
+        <p class="footer-contents">Designed and developed by BISG.</p>
     </footer>
 
     <script src="{% static "helloworld/js/set-background.js" %}"></script>
